@@ -5,7 +5,7 @@ use App::Prove;
 
 my $app = App::Prove->new;
 $app->process_args(@ARGV);
-exit $app->run ? 0 : 1;
+exit( $app->run ? 0 : 1 );
 
 __END__
 
